Fix CSS overflow problem, that was causing an error in the Google Search Console (Mobile usability).

--- a/resources/assets/js/Detail/Detail.scss
+++ b/resources/assets/js/Detail/Detail.scss
@@ -207,6 +207,19 @@
     list-style: none;
     padding: 0;
     margin: 0;
+
+    &:first-child {
+      padding-left: 30px;
+      @include breakpoint(1025px) {
+        padding-left: 0;
+      }
+    }
+    &:last-child {
+      padding-right: 30px;
+      @include breakpoint(1025px) {
+        padding-right: 0;
+      }
+    }
   }
   img {
     display: block;
@@ -361,6 +374,10 @@
 }
 
 .Detail__left-zone {
+  .DetailImageList {
+    flex: 0 0 80px;
+    display: flex;
+  }
   @include breakpoint($medium-up) {
     height: 100vh;
     display: flex;
@@ -370,10 +387,6 @@
     .DetailMainImage {
       flex: 1 1 auto;
     }
-  }
-  .DetailImageList {
-    flex: 0 0 80px;
-    display: flex;
   }
 }
 
@@ -398,12 +411,11 @@
       justify-content: flex-start;
       margin-top: 40px;
       margin-bottom: 60px;
-      margin-left: 30px;
-      margin-right: 30px;
+      margin-left: 0;
+      margin-right: 0;
       @include breakpoint(768px) {
         margin-top: 0;
         margin-top: 60px;
-        margin-left: 30px;
       }
       @include breakpoint(1024px) {
         margin-top: 30px;
